--- a/og.html
+++ b/og.html
@@ -10,7 +10,7 @@
   <!-- og -->
   <meta property="og:title" content="오픈그래피 연습">
   <meta property="og:description" content="오픈그래피 연습으로 깃허브를 통해 확인합니다">
-  <meta property="og:image" content="ihttps://wkd6262.github.io/og/images/dd.png">
+  <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
   <meta property="og:url" content="https://wkd6262.github.io/og/">
 <body>
   <h1>Open Graph 연습</h1>
