--- a/og.html
+++ b/og.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="오픈그래피 연습">
   <meta property="og:description" content="오픈그래피 연습으로 깃허브를 통해 확인합니다">
   <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
-  <meta property="og:url" content="https://wkd6262.github.io/og/">
+  <meta property="og:url" content="https://wkd6262.github.io/og/og.html">
 <body>
   <h1>Open Graph 연습</h1>
   <strong><a href="https://ogp.me" target="_blank">The Open Graph protocol</a></strong>
