--- a/og.html
+++ b/og.html
@@ -8,8 +8,8 @@
   <meta name="description" content="실제 업로드를 통해 og를 확인하는 문서">
 
   <!-- og -->
-  <meta property="og:title" content="오픈그래피 연습">
-  <meta property="og:description" content="오픈그래피 연습으로 깃허브를 통해 확인합니다">
+  <meta property="og:title" content="머리가 아파요!">
+  <meta property="og:description" content="이런! 소년이 두통에 힘들어 하네요 클릭해서 도와주세요!">
   <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
   <meta property="og:url" content="https://wkd6262.github.io/og/og.html">
 <body>
