--- a/og.html
+++ b/og.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Open Graph</title>
-  <meta name="title" content="og 연습">
-  <meta name="description" content="실제 업로드를 통해 og를 확인하는 문서">
+  <meta name="title" content="아픈 소년">
+  <meta name="description" content="치료해주세요!">
 
   <!-- og -->
   <meta property="og:title" content="머리가 아파요!">
@@ -13,13 +13,8 @@
   <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
   <meta property="og:url" content="https://wkd6262.github.io/og/og.html">
 <body>
-  <h1>Open Graph 연습</h1>
-  <strong><a href="https://ogp.me" target="_blank">The Open Graph protocol</a></strong>
-  <ul>
-    <li>og:title</li>
-    <li>og:description</li>
-    <li>og:image</li>
-    <li>og:url</li>
-  </ul>
+  <h1>덕분에 소년이 나아졌어요!</h1>
+  <strong>고마워요!</strong>
+  <img src="thumbs.jpg" alt="wow!">
 </body>
 </html>
