--- a/og.html
+++ b/og.html
@@ -15,6 +15,6 @@
 <body>
   <h1>덕분에 소년이 나아졌어요!</h1>
   <strong>고마워요!</strong>
-  <img src="thumbs.jpg" alt="wow!">
+  <img src="https://github.com/wkd6262/og/blob/main/images/thumbs.jpg?raw=true" alt="wow!">
 </body>
 </html>
