--- a/og.html
+++ b/og.html
@@ -13,8 +13,8 @@
   <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
   <meta property="og:url" content="https://wkd6262.github.io/og/og.html">
 <body>
-  <h1>덕분에 소년이 나아졌어요!</h1>
-  <strong>고마워요!</strong>
+  <h1>이런! 소년의 몰카였군요!</h1>
+  <strong>하하! 멍청이! 메롱!</strong>
   <img src="https://github.com/wkd6262/og/blob/main/images/thumbs.jpg?raw=true" alt="wow!">
 </body>
 </html>
