--- a/og.html
+++ b/og.html
@@ -9,7 +9,7 @@
 
   <!-- og -->
   <meta property="og:title" content="머리가 아파요!">
-  <meta property="og:description" content="이런! 소년이 두통에 힘들어 하네요 클릭해서 도와주세요!">
+  <meta property="og:description" content="이런! 소년이 힘들어 하네요 클릭해서 도와주세요!">
   <meta property="og:image" content="https://wkd6262.github.io/og/images/dd.png">
   <meta property="og:url" content="https://wkd6262.github.io/og/og.html">
 <body>
